--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,10 +1,10 @@
 name = "lapis"
 version = "0.1.0"
-defaultTargets = ["lapis"]
+defaultTargets = ["Lapis"]
 
 [[lean_lib]]
 name = "Lapis"
 
 [[lean_exe]]
-name = "lapis"
-root = "Main"
+name = "test"
+root = "test_server"
